# counterexample-commons

./: .colab_hash_before  .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE_POLICY.md  NOTICE.md  PROJECT_CAPABILITIES.yml  PROJECT_STATUS_AND_REPOSITORY_BOUNDARIES.md  README.md  THIRD_PARTY_SOURCES_AND_LICENSES.md  fix_baseline.py  pyproject.toml  requirements.txt
.github/: REPOSITORY_TOPICS.md
app/: __init__.py  main.py
branding/: README.md  SOCIAL_PREVIEW_BRIEF.md
colab/: COLAB_LIMITATIONS.md  COLAB_REPRODUCIBILITY_POLICY.md  COLAB_USAGE.md  colab_secret_loader.py  validate_colab_notebooks.py  validate_no_secret_leak.py
counterexample_commons/: __init__.py  claims.py  config.py  env_loader.py  lab.py  source_map.py  validated_result.py  visualization.py
docs/: CITATION_AND_ARCHIVAL_POLICY.md  GRADIO_COLAB_EXECUTION.md  GRADIO_DEPLOYMENT_OPTIONS.md  GRADIO_LOCAL_EXECUTION.md  GRADIO_UI_ARCHITECTURE.md  PUBLIC_DEMO_SECURITY_POLICY.md  UI_SCIENTIFIC_INTEGRITY_POLICY.md
notebooks/: 00A_Launch_Gradio_UI_in_Colab.ipynb  00B_Launch_Public_Baseline_Demo_Only.ipynb  00_START_HERE_Colab.ipynb  01_Problem_and_Primary_Sources.ipynb  02_Exact_Baseline_Reproduction.ipynb  03_Interactive_Unit_Distance_Explorer.ipynb  04A_Compare_Multiple_Providers.ipynb  04B_Ollama_Local_Execution_Guide.ipynb  04_Controlled_AI_Construction_Experiment.ipynb  05_Export_Validated_Report.ipynb  Counterexample_Commons_Complete_Lab_Colab.ipynb  DEPRECATED_NOTEBOOKS.md
references/: CLAIM_TO_SOURCE_MATRIX.md  PRIMARY_SOURCES.md  references.bib
(+78 files in other folders)
